# Grounded-SAM-2-ROS

./: README.md
florence2_sam2_ros/: CMakeLists.txt  package.xml
florence2_sam2_ros/launch/: florence2_sam2_realsense.launch
florence2_sam2_ros/scripts/: florence2_sam2_ros_realsense_node.py
