<?xml version="1.0"?>
<package format="2">
  <name>florence2_sam2_ros</name>
  <version>0.1.0</version>
  <description>
    A package that integrates Grounded-SAM2 (florence2_sam2) with ROS to process image topics from realsense_ros.
  </description>
  
  <maintainer email="kimyj.sejong@gmail.com">Yujin Kim</maintainer>
  <license>BSD</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <!-- Add additional export settings here if needed -->
  </export>
</package>
